fix: web tabs gap

--- a/web/workspace/frontend/sass/parts/infographic.scss
+++ b/web/workspace/frontend/sass/parts/infographic.scss
@@ -221,6 +221,7 @@ height: 100%;
 .w-web__tab {
 	display: inline-block;
 	width: 33.333%;
+	margin-right: -3px;
 }
 .w-web__tab a {
 	display: block;
